<resources>
    <string name="brow_nh_cn">【emotion.smile.gif】</string>
    <string name="brow_zj_cn">【emotion.goodbye.gif】</string>
    <string name="brow_gx_cn">【emotion.laugh.gif】</string>
    <string name="brow_sx_cn">【emotion.cry.gif】</string>
    <string name="brow_tkl_cn">【feedback.quickly.png】</string>
    <string name="brow_tml_cn">【feedback.slowly.png】</string>
    <string name="brow_zt_cn">【feedback.agreed.png】</string>
    <string name="brow_fd_cn">【feedback.against.gif】</string>
    <string name="brow_gz_cn">【feedback.applaud.png】</string>
    <string name="brow_fn_cn">【emotion.angerly.gif】</string>
    <string name="brow_zdsk_cn">【feedback.think.png】</string>
    <string name="brow_wl_cn">【emotion.nod.gif】</string>
    <string name="brow_lh_cn">【emotion.lh.gif】</string>
    <string name="brow_bs_cn">【emotion.bs.gif】</string>
    <string name="brow_yw_cn">【emotion.question.gif】</string>
    <string name="brow_dx_cn">【rose.down.png】</string>
    <string name="brow_xh_cn">【rose.up.png】</string>
    <string name="brow_lw_cn">【chat.gift.png】</string>
    <string name="emotion_bz_cn">【emotion.bz.gif】</string>
    <string name="emotion_fd_cn">【emotion.fd.gif】</string>
    <string name="emotion_gg_cn">【emotion.gg.gif】</string>
    <string name="emotion_gz_cn">【emotion.gz.gif】</string>
    <string name="emotion_hx_cn">【emotion.hx.gif】</string>
    <string name="emotion_jk_cn">【emotion.jk.gif】</string>
    <string name="emotion_jy_cn">【emotion.jy.gif】</string>
    <string name="emotion_kb_cn">【emotion.kb.gif】</string>
    <string name="emotion_kl_cn">【emotion.kl.gif】</string>
    <string name="emotion_ll_cn">【emotion.ll.gif】</string>
    <string name="emotion_qd_cn">【emotion.qd.gif】</string>
    <string name="emotion_qh_cn">【emotion.qh.gif】</string>
    <string name="emotion_qq_cn">【emotion.qq.gif】</string>
    <string name="emotion_rb_cn">【emotion.rb.gif】</string>
    <string name="emotion_se_cn">【emotion.se.gif】</string>
    <string name="emotion_tx_cn">【emotion.tx.gif】</string>
    <string name="emotion_xu_cn">【emotion.xu.gif】</string>
    <string name="emotion_yun_cn">【emotion.yun.gif】</string>
    <string name="allname">所有人</string>
    <string name="justlookmyname">只看我的聊天</string>
    <string name="justlookmyqa">只看我的提问</string>
    <string name="sytsemmesg">系统消息</string>
    <string name="displaytime">00:00:00</string>
    <string name="chat_system_msg_colon">系统消息:</string>
    <string name="chat_to">对</string>
    <string name="chat_say">说</string>
    <string name="chat_me">我</string>
    <string name="chat_msg_not_null">聊天信息不能为空</string>
    <string name="chat_self_null">自己的用户信息为空</string>
    <string name="chat_not_to_self">不能和自己聊天</string>
    <string name="query_self_tip">查询中,请稍候....</string>
    <string name="live_pause">直播暂停</string>
    <string name="live_playing">直播中</string>
    <string name="chat_disable">禁止聊天</string>
    <string name="chat_enable">允许聊天</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="vote_have_commit">已提交</string>
    <string name="commit">提交</string>
    <string name="vote_qiangzhi_tip">当前为强制投票，需要提交后才能关闭</string>
    <string name="single_choice">【单选】</string>
    <string name="multi_choice">【多选】</string>
    <string name="text_wd">【问答】</string>
    <string name="vote_total_person_join">共(%d人)参与</string>
    <string name="vote_question_fenshu">, 分数：%d</string>
    <string name="vote_count">%d份</string>
    <string name="vote_not_exist">试卷不存在</string>
    <string name="vote_deadline_tip">抱歉! 本试卷已被终止，不能提交了。</string>
    <string name="vote_please_dawan">请先答题再提交</string>
    <string name="vote_please_dawan_all">请回答完所有问题</string>
    <string name="brow_nh_cn_text">【你好】</string>
    <string name="brow_zj_cn_text">【再见】</string>
    <string name="brow_gx_cn_text">【高兴】</string>
    <string name="brow_sx_cn_text">【伤心】</string>
    <string name="brow_tkl_cn_text">【太快了】</string>
    <string name="brow_tml_cn_text">【太慢了】</string>
    <string name="brow_zt_cn_text">【赞同】</string>
    <string name="brow_fd_cn_text">【反对】</string>
    <string name="brow_gz_cn_text">【鼓掌】</string>
    <string name="brow_fn_cn_text">【愤怒】</string>
    <string name="brow_zdsk_cn_text">【值得思考】</string>
    <string name="brow_wl_cn_text">【无聊】</string>
    <string name="brow_lh_cn_text">【流汗】</string>
    <string name="brow_bs_cn_text">【鄙视】</string>
    <string name="brow_yw_cn_text">【疑问】</string>
    <string name="brow_dx_cn_text">【凋谢】</string>
    <string name="brow_xh_cn_text">【鲜花】</string>
    <string name="brow_lw_cn_text">【礼物】</string>
    <string name="emotion_bz_cn_text">【闭嘴】</string>
    <string name="emotion_fd_cn_text">【奋斗】</string>
    <string name="emotion_gg_cn_text">【尴尬】</string>
    <string name="emotion_gz_cn_text">【鼓掌】</string>
    <string name="emotion_hx_cn_text">【害羞】</string>
    <string name="emotion_jk_cn_text">【惊恐】</string>
    <string name="emotion_jy_cn_text">【惊讶】</string>
    <string name="emotion_kb_cn_text">【抠鼻】</string>
    <string name="emotion_kl_cn_text">【可怜】</string>
    <string name="emotion_ll_cn_text">【流泪】</string>
    <string name="emotion_qd_cn_text">【敲打】</string>
    <string name="emotion_qh_cn_text">【强悍】</string>
    <string name="emotion_qq_cn_text">【亲亲】</string>
    <string name="emotion_rb_cn_text">【弱爆】</string>
    <string name="emotion_se_cn_text">【色】</string>
    <string name="emotion_tx_cn_text">【偷笑】</string>
    <string name="emotion_xu_cn_text">【嘘】</string>
    <string name="emotion_yun_cn_text">【晕】</string>
    <string name="chat_context_max">聊天内容总数不能大于512个</string>
    <string name="chat_context_avatar_max">聊天内容表情数不能大于20个</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在载入…</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">口袋自考</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appName">demoapp</string>
    <string name="ok">完成</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="confirm">确认</string>
    <string name="yuan">元</string>
    <string name="donateFailMessage">"　　感谢你的爱心，
但是系统出现了一些错误"</string>
    <string name="validationErrors">错误</string>
    <string name="notInstalled">未安装支付软件</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>
    <string name="app_color">\#00b8e5</string>
    <string name="bg_color">\#f7f8f8</string>
    <string name="pull_down">下拉刷新</string>
    <string name="pull_down_to_refresh">放开刷新</string>
    <string name="pull_down_refreshing">正在刷新</string>
    <string name="pull_up">上拉加载</string>
    <string name="pull_up_to_load">放开加载</string>
    <string name="pull_up_loading">正在加载</string>
    <string name="dialog_loading">努力加载中...</string>
    <string name="skip_unlogin">逛逛先~</string>
    <string name="skip_adv1">最懂你的自考题库</string>
    <string name="skip_adv2">最温暖的同行社区</string>
    <string name="skip_register">注册</string>
    <string name="skip_login">登录</string>
    <string name="skip_disanfang">社交媒体账号登录</string>
    <string name="skip_identify_code">发送验证码</string>
    <string name="main_tab1">刷题</string>
    <string name="main_tab2">资讯</string>
    <string name="main_tab3">我</string>
    <string name="main_tab4">社区</string>
    <string name="personal_unlogin">未登录</string>
    <string name="personal_adv">刷刷习题，就过关！</string>
    <string name="personal_professional">专业</string>
    <string name="personal_subject">科目</string>
    <string name="personal_wallet">我的钱包</string>
    <string name="personal_order">我的订单</string>
    <string name="personal_class">直播课程</string>
    <string name="personal_post">我的帖子</string>
    <string name="personal_sco">奖学金</string>
    <string name="personal_reply">我的回复</string>
    <string name="personal_share">推荐好友</string>
    <string name="personal_data">同步数据</string>
    <string name="personal_update">版本更新</string>
    <string name="personal_suggestion">我要吐槽</string>
    <string name="personal_praise">点赞程序猿</string>
    <string name="personal_about">关于我们</string>
    <string name="personal_mine">我</string>
    <string name="personal_edit">修改个人资料</string>
    <string name="personal_article">文章</string>
    <string name="personal_sign_in">签到</string>
    <string name="personal_wrong">错题篮</string>
    <string name="personal_history">考试记录</string>
    <string name="personal_unchoose">未选择</string>
    <string name="personal_unchoose_warning">同学，您还未选择专业哦</string>
    <string name="personal_unlogin_warning">请先登录</string>
    <string name="personal_exit">退出登录</string>
    <string name="personal_my_publish">我发布的帖子</string>
    <string name="personal_my_reply">我回复的帖子</string>
    <string name="personal_set">设置</string>
    <string name="personal_set_nickname">修改昵称</string>
    <string name="personal_set_phone">手机号码</string>
    <string name="personal_set_password">密码修改</string>
    <string name="personal_reset_password">找回密码</string>
    <string name="personal_set_weixin">微信</string>
    <string name="personal_set_weibo">微博</string>
    <string name="personal_set_qq">QQ</string>
    <string name="personal_set_sex">性别</string>
    <string name="personal_set_sex_male">男</string>
    <string name="personal_set_sex_female">女</string>
    <string name="personal_set_sex_nothing">保密</string>
    <string name="personal_complete">完成</string>
    <string name="personal_old_password">原密码</string>
    <string name="personal_new_password">新密码</string>
    <string name="personal_sure_password">再次输入新密码</string>
    <string name="choose_profession_title">选择省份</string>
    <string name="choose_profession_step1">学习第一步，选定要就读的专业</string>
    <string name="choose_profession_introduce">小袋将为您准备最新最全的题库与讲解</string>
    <string name="choose_profession_province">所在省份</string>
    <string name="choose_profession_save">保存</string>
    <string name="choose_profession_suggestion">没有您的省份？</string>
</resources>