<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/activity_color" android:layout_width="fill_parent" android:layout_height="@dimen/activity_title">
        <Button android:gravity="center_vertical" android:id="@id/button_choose_province_back" android:background="@null" android:layout_width="40.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/screen_side" android:drawableLeft="@drawable/bt_back" />
        <TextView android:textSize="@dimen/text_title" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_profession_title" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/layout_choose_province_content" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/bg_main" android:layout_width="fill_parent" android:layout_height="86.0dip">
                <ImageView android:background="@drawable/choose_pro" android:layout_width="43.0dip" android:layout_height="58.0dip" android:layout_marginLeft="47.0dip" android:contentDescription="@string/app_name" />
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="17.0dip">
                    <TextView android:textSize="15.0sp" android:textColor="@color/activity_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_profession_step1" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/choose_profession_introduce" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="15.0sp" android:textColor="#ff999999" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/choose_profession_province" />
            <GridView android:id="@id/gridview_choose_province" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="27.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="27.0dip" android:horizontalSpacing="35.0dip" android:verticalSpacing="15.0dip" android:numColumns="4" android:layout_weight="1.0" />
            <LinearLayout android:orientation="vertical" android:background="@color/bg_main" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_choose_province_save" android:background="@drawable/bt_choose_professional" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="30.0dip" android:text="@string/choose_profession_save" />
                <TextView android:textSize="12.0dip" android:textColor="#ff666666" android:gravity="center" android:id="@id/text_choose_province_suggestion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="16.0dip" android:text="@string/choose_profession_suggestion" />
            </LinearLayout>
        </LinearLayout>
        <com.withustudy.koudaizikao.custom.LoadingView android:id="@id/loading_choose_province" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </RelativeLayout>
</LinearLayout>