<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@id/layout_main_fragment_content" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <ImageView android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:contentDescription="@string/app_name" />
        <LinearLayout android:orientation="horizontal" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/news_ll" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.0">
                <ImageView android:id="@id/news_iv" android:background="@drawable/tab_main2_un_click" android:layout_width="20.0dip" android:layout_height="20.0dip" android:scaleType="centerInside" android:contentDescription="@string/app_name" />
                <TextView android:textSize="10.0sp" android:textColor="#ff666666" android:id="@id/text_main_tab2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/main_tab2" android:includeFontPadding="false" android:lineSpacingExtra="0.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/layout_main_tab_class" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.0">
                <RelativeLayout android:layout_width="64.0dip" android:layout_height="21.0dip">
                    <ImageView android:id="@id/image_main_tab_class" android:background="@drawable/tab_main_class_un_click" android:layout_width="20.0dip" android:layout_height="20.0dip" android:scaleType="centerInside" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/app_name" />
                    <TextView android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/text_red_dot_live" android:background="@drawable/image_red_dot_live" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="15.0dip" android:text="直播中" android:layout_alignParentRight="true" />
                    <ImageView android:gravity="center" android:id="@id/iv_red_dot_new_cource" android:background="@drawable/red_dot" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="45.0dip" />
                </RelativeLayout>
                <TextView android:textSize="10.0sp" android:textColor="#ff666666" android:id="@id/text_main_tab_class" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="课程" android:includeFontPadding="false" android:lineSpacingExtra="0.0dip" />
            </LinearLayout>
            <TextView android:background="@null" android:layout_width="64.0dip" android:layout_height="fill_parent" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bbs_ll" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.0">
                <ImageView android:id="@id/bbs_iv" android:background="@drawable/tab_main3_un_click" android:layout_width="20.0dip" android:layout_height="20.0dip" android:scaleType="centerInside" android:contentDescription="@string/app_name" />
                <TextView android:textSize="10.0sp" android:textColor="#ff666666" android:id="@id/text_main_tab3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/main_tab4" android:includeFontPadding="false" android:lineSpacingExtra="0.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/myself_ll" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.0">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/myself_iv" android:background="@drawable/tab_main4_un_click" android:layout_width="15.0dip" android:layout_height="20.0dip" android:scaleType="centerInside" android:layout_centerHorizontal="true" android:contentDescription="@string/app_name" />
                    <ImageView android:id="@id/image_red_dot_main" android:background="@drawable/red_dot" android:visibility="gone" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginRight="23.0dip" android:layout_alignParentRight="true" android:contentDescription="@string/app_name" />
                </RelativeLayout>
                <TextView android:textSize="10.0sp" android:textColor="#ff666666" android:id="@id/text_main_tab4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/main_tab3" android:includeFontPadding="false" android:lineSpacingExtra="0.0dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/brush_ll" android:background="@drawable/tab_main1_un_click" android:layout_width="65.0dip" android:layout_height="60.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/appName" />
</RelativeLayout>